# portfolio-karma

./: .gitignore  CMS_migration.md  CNAME  README.md  blogs.json  build.py  index.html  pyproject.toml
.github/workflows/: deploy.yml
assets/images/: README.md
assets/js/: blog-code-copy.js
blog/: blog_1.html  blog_2.html  blog_3.html
content/blog/: blog_1.md  blog_2.md  blog_3.md  multi-gh-setup.md
fonts/: README.md
styles/: main.css
templates/: index.html.j2
templates/blog/: _layout.html.j2  blog_1.html.j2  blog_2.html.j2  blog_3.html.j2  markdown_post.html.j2
templates/partials/: footer_blog.html  footer_main.html  header.html
