[project]
name = "minimal-portfolio"
version = "0.1.0"
description = "python builders for parts of the portfolio, mostly around blog templates"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "catppuccin>=2.5.0",
    "jinja2>=3.1.6",
    "markdown>=3.10.2",
    "pygments>=2.19.2",
    "pyyaml>=6.0.3",
]
